--- a/model.ipynb
+++ b/model.ipynb
@@ -34,13 +34,14 @@
     "        angle = 360 - angle\n",
     "    return angle\n",
     "\n",
-    "def extract_body_silhouette(frame, bg_subtractor):\n",
-    "    \"\"\"Extract human body silhouette\"\"\"\n",
+    "def extract_body_silhouette(frame, bg_subtractor, sensitivity=1.0):\n",
+    "    \"\"\"Extract human body silhouette with adjustable sensitivity\"\"\"\n",
     "    # Apply background subtraction\n",
     "    fg_mask = bg_subtractor.apply(frame)\n",
     "    \n",
-    "    # Denoise and refine mask\n",
-    "    kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (7, 7))\n",
+    "    # Denoise and refine mask - smaller kernel for better detail\n",
+    "    kernel_size = max(3, int(5 * sensitivity))\n",
+    "    kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (kernel_size, kernel_size))\n",
     "    fg_mask = cv2.morphologyEx(fg_mask, cv2.MORPH_CLOSE, kernel)\n",
     "    fg_mask = cv2.morphologyEx(fg_mask, cv2.MORPH_OPEN, kernel)\n",
     "    \n",
@@ -53,7 +54,9 @@
     "    # Get largest contour\n",
     "    body_contour = max(contours, key=cv2.contourArea)\n",
     "    \n",
-    "    if cv2.contourArea(body_contour) < 5000:  # Filter small detections\n",
+    "    # Much lower threshold for partial body detection\n",
+    "    min_area = int(2000 / sensitivity)  # Reduced from 5000\n",
+    "    if cv2.contourArea(body_contour) < min_area:\n",
     "        return None, fg_mask\n",
     "    \n",
     "    return body_contour, fg_mask\n",
@@ -244,6 +247,9 @@
     "        S - Save frame\n",
     "        C - Toggle contour\n",
     "        B - Recalibrate background\n",
+    "        M - Toggle mask view (debug)\n",
+    "        + - Increase sensitivity\n",
+    "        - - Decrease sensitivity\n",
     "    \"\"\"\n",
     "    cap = cv2.VideoCapture(camera_id)\n",
     "    if not cap.isOpened():\n",
@@ -254,11 +260,13 @@
     "    cap.set(cv2.CAP_PROP_FPS, 30)\n",
     "    \n",
     "    bg_subtractor = cv2.createBackgroundSubtractorMOG2(\n",
-    "        history=500, varThreshold=25, detectShadows=False\n",
+    "        history=300, varThreshold=16, detectShadows=True\n",
     "    )\n",
     "    \n",
     "    prev_time = 0\n",
     "    frame_count = 0\n",
+    "    show_mask = False\n",
+    "    sensitivity = 1.0\n",
     "    \n",
     "    while cap.isOpened():\n",
     "        ret, frame = cap.read()\n",
@@ -270,8 +278,13 @@
     "        prev_time = curr_time\n",
     "        frame_count += 1\n",
     "        \n",
-    "        body_contour, fg_mask = extract_body_silhouette(frame, bg_subtractor)\n",
+    "        body_contour, fg_mask = extract_body_silhouette(frame, bg_subtractor, sensitivity)\n",
     "        skeleton = approximate_skeleton(body_contour, frame.shape)\n",
+    "        \n",
+    "        # Show debug mask if enabled\n",
+    "        if show_mask:\n",
+    "            mask_color = cv2.cvtColor(fg_mask, cv2.COLOR_GRAY2BGR)\n",
+    "            cv2.imshow('Detection Mask (Debug)', mask_color)\n",
     "        \n",
     "        if show_contour and body_contour is not None:\n",
     "            cv2.drawContours(frame, [body_contour], -1, (0, 255, 0), 2)\n",
@@ -287,7 +300,10 @@
     "        cv2.putText(frame, status, (20, 75),\n",
     "                   cv2.FONT_HERSHEY_SIMPLEX, 0.6, status_color, 2)\n",
     "        \n",
-    "        cv2.putText(frame, \"Q:Quit | S:Save | C:Contour | B:Recalibrate\", \n",
+    "        cv2.putText(frame, f'Sensitivity: {sensitivity:.1f}x', (20, 110),\n",
+    "                   cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 0), 1)\n",
+    "        \n",
+    "        cv2.putText(frame, \"Q:Quit | S:Save | C:Contour | M:Mask | +/-:Sensitivity | B:Recalibrate\", \n",
     "                   (10, frame.shape[0] - 20),\n",
     "                   cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 1)\n",
     "        \n",
@@ -306,13 +322,21 @@
     "            cv2.imwrite(img_name, frame)\n",
     "        elif key in (ord('c'), ord('C')):\n",
     "            show_contour = not show_contour\n",
+    "        elif key in (ord('m'), ord('M')):\n",
+    "            show_mask = not show_mask\n",
+    "            if not show_mask:\n",
+    "                cv2.destroyWindow('Detection Mask (Debug)')\n",
+    "        elif key == ord('+') or key == ord('='):\n",
+    "            sensitivity = min(3.0, sensitivity + 0.1)\n",
+    "        elif key == ord('-') or key == ord('_'):\n",
+    "            sensitivity = max(0.5, sensitivity - 0.1)\n",
     "        elif key in (ord('b'), ord('B')):\n",
     "            bg_subtractor = cv2.createBackgroundSubtractorMOG2(\n",
-    "                history=500, varThreshold=25, detectShadows=False\n",
+    "                history=300, varThreshold=16, detectShadows=True\n",
     "            )\n",
     "    \n",
     "    cap.release()\n",
-    "    cv2.destroyAllWindows()\n"
+    "    cv2.destroyAllWindows()"
    ]
   },
   {
@@ -322,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "body_pose_tracker(camera_id=0, show_contour=True)\n"
+    "body_pose_tracker(camera_id=1, show_contour=True)"
    ]
   }
  ],
