applied ultralytics from YOLO. base system almost finished.

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "8edabb9a",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "import numpy as np\n",
     "from datetime import datetime\n",
     "import time\n",
-    "from collections import deque"
+    "from collections import deque\n",
+    "from ultralytics import YOLO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "6d77ddef",
    "metadata": {},
    "outputs": [],
@@ -34,138 +35,58 @@
     "        angle = 360 - angle\n",
     "    return angle\n",
     "\n",
-    "def extract_body_silhouette(frame, bg_subtractor, sensitivity=1.0):\n",
-    "    \"\"\"Extract human body silhouette with adjustable sensitivity\"\"\"\n",
-    "    # Apply background subtraction\n",
-    "    fg_mask = bg_subtractor.apply(frame)\n",
-    "    \n",
-    "    # Denoise and refine mask - smaller kernel for better detail\n",
-    "    kernel_size = max(3, int(5 * sensitivity))\n",
-    "    kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (kernel_size, kernel_size))\n",
-    "    fg_mask = cv2.morphologyEx(fg_mask, cv2.MORPH_CLOSE, kernel)\n",
-    "    fg_mask = cv2.morphologyEx(fg_mask, cv2.MORPH_OPEN, kernel)\n",
-    "    \n",
-    "    # Find largest contour (body)\n",
-    "    contours, _ = cv2.findContours(fg_mask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    \n",
-    "    if not contours:\n",
-    "        return None, fg_mask\n",
-    "    \n",
-    "    # Get largest contour\n",
-    "    body_contour = max(contours, key=cv2.contourArea)\n",
-    "    \n",
-    "    # Much lower threshold for partial body detection\n",
-    "    min_area = int(2000 / sensitivity)  # Reduced from 5000\n",
-    "    if cv2.contourArea(body_contour) < min_area:\n",
-    "        return None, fg_mask\n",
-    "    \n",
-    "    return body_contour, fg_mask\n",
-    "\n",
-    "def approximate_skeleton(contour, frame_shape):\n",
-    "    \"\"\"Approximate body skeleton from contour\"\"\"\n",
-    "    if contour is None:\n",
+    "def extract_yolo_skeleton(results):\n",
+    "    \"\"\"Extract skeleton from YOLO pose detection\"\"\"\n",
+    "    if results[0].keypoints is None or len(results[0].keypoints.data) == 0:\n",
     "        return None\n",
     "    \n",
-    "    h, w = frame_shape[:2]\n",
+    "    # Get keypoints (17 COCO keypoints)\n",
+    "    keypoints = results[0].keypoints.data[0].cpu().numpy()\n",
     "    \n",
-    "    # Get bounding rectangle and moments\n",
-    "    x, y, rect_w, rect_h = cv2.boundingRect(contour)\n",
-    "    M = cv2.moments(contour)\n",
-    "    \n",
-    "    if M[\"m00\"] == 0:\n",
-    "        return None\n",
-    "    \n",
-    "    # Calculate center of mass (torso center)\n",
-    "    cx = int(M[\"m10\"] / M[\"m00\"])\n",
-    "    cy = int(M[\"m01\"] / M[\"m00\"])\n",
-    "    \n",
-    "    # Approximate key points based on body proportions\n",
     "    skeleton = {}\n",
     "    \n",
-    "    # Head (top of bounding box)\n",
-    "    skeleton['head'] = (cx, y + int(rect_h * 0.1))\n",
+    "    # YOLO COCO keypoint mapping (17 points)\n",
+    "    # 0: nose, 1-2: eyes, 3-4: ears, 5: left_shoulder, 6: right_shoulder,\n",
+    "    # 7: left_elbow, 8: right_elbow, 9: left_wrist, 10: right_wrist,\n",
+    "    # 11: left_hip, 12: right_hip, 13: left_knee, 14: right_knee,\n",
+    "    # 15: left_ankle, 16: right_ankle\n",
     "    \n",
-    "    # Neck\n",
-    "    skeleton['neck'] = (cx, y + int(rect_h * 0.15))\n",
+    "    # Only use points with confidence > 0.5\n",
+    "    def get_point(idx):\n",
+    "        if idx < len(keypoints) and keypoints[idx][2] > 0.5:\n",
+    "            return (int(keypoints[idx][0]), int(keypoints[idx][1]))\n",
+    "        return None\n",
     "    \n",
-    "    # Shoulders (width proportional to body)\n",
-    "    shoulder_y = y + int(rect_h * 0.2)\n",
-    "    shoulder_offset = int(rect_w * 0.35)\n",
-    "    skeleton['left_shoulder'] = (cx - shoulder_offset, shoulder_y)\n",
-    "    skeleton['right_shoulder'] = (cx + shoulder_offset, shoulder_y)\n",
+    "    # Map to our skeleton format\n",
+    "    if get_point(0): skeleton['head'] = get_point(0)\n",
+    "    if get_point(0): skeleton['neck'] = get_point(0)  # Approximate\n",
+    "    if get_point(5): skeleton['left_shoulder'] = get_point(5)\n",
+    "    if get_point(6): skeleton['right_shoulder'] = get_point(6)\n",
+    "    if get_point(7): skeleton['left_elbow'] = get_point(7)\n",
+    "    if get_point(8): skeleton['right_elbow'] = get_point(8)\n",
+    "    if get_point(9): skeleton['left_hand'] = get_point(9)\n",
+    "    if get_point(10): skeleton['right_hand'] = get_point(10)\n",
+    "    if get_point(11): skeleton['left_hip'] = get_point(11)\n",
+    "    if get_point(12): skeleton['right_hip'] = get_point(12)\n",
+    "    if get_point(13): skeleton['left_knee'] = get_point(13)\n",
+    "    if get_point(14): skeleton['right_knee'] = get_point(14)\n",
+    "    if get_point(15): skeleton['left_foot'] = get_point(15)\n",
+    "    if get_point(16): skeleton['right_foot'] = get_point(16)\n",
     "    \n",
-    "    # Torso center\n",
-    "    skeleton['torso'] = (cx, cy)\n",
+    "    # Calculate torso center if shoulders and hips available\n",
+    "    if all(k in skeleton for k in ['left_shoulder', 'right_shoulder', 'left_hip', 'right_hip']):\n",
+    "        torso_x = (skeleton['left_shoulder'][0] + skeleton['right_shoulder'][0] + \n",
+    "                   skeleton['left_hip'][0] + skeleton['right_hip'][0]) // 4\n",
+    "        torso_y = (skeleton['left_shoulder'][1] + skeleton['right_shoulder'][1] + \n",
+    "                   skeleton['left_hip'][1] + skeleton['right_hip'][1]) // 4\n",
+    "        skeleton['torso'] = (torso_x, torso_y)\n",
     "    \n",
-    "    # Hips\n",
-    "    hip_y = y + int(rect_h * 0.55)\n",
-    "    hip_offset = int(rect_w * 0.25)\n",
-    "    skeleton['left_hip'] = (cx - hip_offset, hip_y)\n",
-    "    skeleton['right_hip'] = (cx + hip_offset, hip_y)\n",
-    "    \n",
-    "    # Find extremity points (hands and feet)\n",
-    "    # Get convex hull and defects\n",
-    "    hull = cv2.convexHull(contour, returnPoints=False)\n",
-    "    if len(hull) > 3:\n",
-    "        defects = cv2.convexityDefects(contour, hull)\n",
-    "        \n",
-    "        if defects is not None:\n",
-    "            extremities = []\n",
-    "            for i in range(defects.shape[0]):\n",
-    "                s, e, f, d = defects[i, 0]\n",
-    "                start = tuple(contour[s][0])\n",
-    "                extremities.append(start)\n",
-    "            \n",
-    "            # Sort extremities by Y coordinate (top to bottom)\n",
-    "            extremities = sorted(extremities, key=lambda p: p[1])\n",
-    "            \n",
-    "            # Classify extremities as hands or feet based on Y position\n",
-    "            mid_y = y + rect_h // 2\n",
-    "            hands = [p for p in extremities if p[1] < mid_y]\n",
-    "            feet = [p for p in extremities if p[1] > mid_y]\n",
-    "            \n",
-    "            # Assign hands (left/right based on X)\n",
-    "            if len(hands) >= 2:\n",
-    "                hands = sorted(hands, key=lambda p: p[0])\n",
-    "                skeleton['left_hand'] = hands[0]\n",
-    "                skeleton['right_hand'] = hands[-1]\n",
-    "            \n",
-    "            # Assign feet (left/right based on X)\n",
-    "            if len(feet) >= 2:\n",
-    "                feet = sorted(feet, key=lambda p: p[0])\n",
-    "                skeleton['left_foot'] = feet[0]\n",
-    "                skeleton['right_foot'] = feet[-1]\n",
-    "    \n",
-    "    # Estimate elbows (midpoint between shoulder and hand)\n",
-    "    if 'left_hand' in skeleton:\n",
-    "        skeleton['left_elbow'] = (\n",
-    "            (skeleton['left_shoulder'][0] + skeleton['left_hand'][0]) // 2,\n",
-    "            (skeleton['left_shoulder'][1] + skeleton['left_hand'][1]) // 2\n",
-    "        )\n",
-    "    if 'right_hand' in skeleton:\n",
-    "        skeleton['right_elbow'] = (\n",
-    "            (skeleton['right_shoulder'][0] + skeleton['right_hand'][0]) // 2,\n",
-    "            (skeleton['right_shoulder'][1] + skeleton['right_hand'][1]) // 2\n",
-    "        )\n",
-    "    \n",
-    "    # Estimate knees (midpoint between hip and foot)\n",
-    "    if 'left_foot' in skeleton:\n",
-    "        skeleton['left_knee'] = (\n",
-    "            (skeleton['left_hip'][0] + skeleton['left_foot'][0]) // 2,\n",
-    "            (skeleton['left_hip'][1] + skeleton['left_foot'][1]) // 2\n",
-    "        )\n",
-    "    if 'right_foot' in skeleton:\n",
-    "        skeleton['right_knee'] = (\n",
-    "            (skeleton['right_hip'][0] + skeleton['right_foot'][0]) // 2,\n",
-    "            (skeleton['right_hip'][1] + skeleton['right_foot'][1]) // 2\n",
-    "        )\n",
-    "    \n",
-    "    return skeleton"
+    "    return skeleton if len(skeleton) > 0 else None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "401a27f1",
    "metadata": {},
    "outputs": [],
@@ -229,69 +150,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "b14b6372",
    "metadata": {},
    "outputs": [],
    "source": [
     "def body_pose_tracker(camera_id=0, show_contour=True):\n",
     "    \"\"\"\n",
-    "    Real-time body pose tracking using contour analysis\n",
+    "    Real-time body pose tracking using YOLOv8 Pose\n",
     "    \n",
     "    Args:\n",
     "        camera_id: Camera index (default: 0)\n",
-    "        show_contour: Show body contour\n",
+    "        show_contour: Show body contour (not used)\n",
     "    \n",
     "    Controls:\n",
     "        Q - Quit\n",
     "        S - Save frame\n",
-    "        C - Toggle contour\n",
-    "        B - Recalibrate background\n",
-    "        M - Toggle mask view (debug)\n",
-    "        + - Increase sensitivity\n",
-    "        - - Decrease sensitivity\n",
+    "        C - Toggle YOLO keypoints visibility\n",
     "    \"\"\"\n",
     "    cap = cv2.VideoCapture(camera_id)\n",
     "    if not cap.isOpened():\n",
+    "        print(\"Error: Could not open camera\")\n",
     "        return\n",
     "    \n",
     "    cap.set(cv2.CAP_PROP_FRAME_WIDTH, 1280)\n",
     "    cap.set(cv2.CAP_PROP_FRAME_HEIGHT, 720)\n",
     "    cap.set(cv2.CAP_PROP_FPS, 30)\n",
     "    \n",
-    "    bg_subtractor = cv2.createBackgroundSubtractorMOG2(\n",
-    "        history=300, varThreshold=16, detectShadows=True\n",
-    "    )\n",
+    "    # Load YOLOv8 Pose model\n",
+    "    print(\"Loading YOLOv8 Pose model...\")\n",
+    "    model = YOLO('yolov8n-pose.pt')  # Nano model for speed\n",
     "    \n",
     "    prev_time = 0\n",
-    "    frame_count = 0\n",
-    "    show_mask = False\n",
-    "    sensitivity = 1.0\n",
+    "    show_yolo_keypoints = True\n",
+    "    \n",
+    "    print(\"Starting body pose tracker with YOLOv8...\")\n",
+    "    print(\"Ready to track!\")\n",
     "    \n",
     "    while cap.isOpened():\n",
     "        ret, frame = cap.read()\n",
     "        if not ret:\n",
+    "            print(\"Error: Could not read frame\")\n",
     "            break\n",
     "        \n",
     "        curr_time = time.time()\n",
     "        fps = 1 / (curr_time - prev_time) if prev_time > 0 else 0\n",
     "        prev_time = curr_time\n",
-    "        frame_count += 1\n",
     "        \n",
-    "        body_contour, fg_mask = extract_body_silhouette(frame, bg_subtractor, sensitivity)\n",
-    "        skeleton = approximate_skeleton(body_contour, frame.shape)\n",
+    "        # Run YOLO pose detection\n",
+    "        results = model(frame, verbose=False)\n",
     "        \n",
-    "        # Show debug mask if enabled\n",
-    "        if show_mask:\n",
-    "            mask_color = cv2.cvtColor(fg_mask, cv2.COLOR_GRAY2BGR)\n",
-    "            cv2.imshow('Detection Mask (Debug)', mask_color)\n",
+    "        # Extract skeleton\n",
+    "        skeleton = extract_yolo_skeleton(results)\n",
     "        \n",
-    "        if show_contour and body_contour is not None:\n",
-    "            cv2.drawContours(frame, [body_contour], -1, (0, 255, 0), 2)\n",
+    "        # Draw YOLO keypoints if enabled\n",
+    "        if show_yolo_keypoints and results[0].keypoints is not None:\n",
+    "            frame = results[0].plot()\n",
     "        \n",
+    "        # Draw custom skeleton overlay\n",
     "        if skeleton:\n",
     "            frame = draw_skeleton(frame, skeleton)\n",
     "        \n",
+    "        # Display info\n",
     "        cv2.putText(frame, f'FPS: {fps:.1f}', (20, 40),\n",
     "                   cv2.FONT_HERSHEY_SIMPLEX, 0.8, (0, 255, 0), 2)\n",
     "        \n",
@@ -300,19 +220,11 @@
     "        cv2.putText(frame, status, (20, 75),\n",
     "                   cv2.FONT_HERSHEY_SIMPLEX, 0.6, status_color, 2)\n",
     "        \n",
-    "        cv2.putText(frame, f'Sensitivity: {sensitivity:.1f}x', (20, 110),\n",
-    "                   cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 0), 1)\n",
-    "        \n",
-    "        cv2.putText(frame, \"Q:Quit | S:Save | C:Contour | M:Mask | +/-:Sensitivity | B:Recalibrate\", \n",
+    "        cv2.putText(frame, \"Q:Quit | S:Save | C:Toggle YOLO Keypoints\", \n",
     "                   (10, frame.shape[0] - 20),\n",
     "                   cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 1)\n",
     "        \n",
-    "        if frame_count < 90:\n",
-    "            cv2.putText(frame, \"CALIBRATING...\", \n",
-    "                       (frame.shape[1]//2 - 150, frame.shape[0]//2),\n",
-    "                       cv2.FONT_HERSHEY_DUPLEX, 1.0, (0, 0, 255), 3)\n",
-    "        \n",
-    "        cv2.imshow('Body Pose Tracker', frame)\n",
+    "        cv2.imshow('Body Pose Tracker - YOLOv8', frame)\n",
     "        \n",
     "        key = cv2.waitKey(1) & 0xFF\n",
     "        if key in (ord('q'), ord('Q')):\n",
@@ -320,31 +232,33 @@
     "        elif key in (ord('s'), ord('S')):\n",
     "            img_name = f'pose_{datetime.now().strftime(\"%Y%m%d_%H%M%S\")}.jpg'\n",
     "            cv2.imwrite(img_name, frame)\n",
+    "            print(f\"Saved: {img_name}\")\n",
     "        elif key in (ord('c'), ord('C')):\n",
-    "            show_contour = not show_contour\n",
-    "        elif key in (ord('m'), ord('M')):\n",
-    "            show_mask = not show_mask\n",
-    "            if not show_mask:\n",
-    "                cv2.destroyWindow('Detection Mask (Debug)')\n",
-    "        elif key == ord('+') or key == ord('='):\n",
-    "            sensitivity = min(3.0, sensitivity + 0.1)\n",
-    "        elif key == ord('-') or key == ord('_'):\n",
-    "            sensitivity = max(0.5, sensitivity - 0.1)\n",
-    "        elif key in (ord('b'), ord('B')):\n",
-    "            bg_subtractor = cv2.createBackgroundSubtractorMOG2(\n",
-    "                history=300, varThreshold=16, detectShadows=True\n",
-    "            )\n",
+    "            show_yolo_keypoints = not show_yolo_keypoints\n",
     "    \n",
     "    cap.release()\n",
-    "    cv2.destroyAllWindows()"
+    "    cv2.destroyAllWindows()\n",
+    "    print(\"Tracker stopped\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "1ba9620b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading YOLOv8 Pose model...\n",
+      "\u001b[KDownloading https://github.com/ultralytics/assets/releases/download/v8.3.0/yolov8n-pose.pt to 'yolov8n-pose.pt': 100% ━━━━━━━━━━━━ 6.5MB 1.5MB/s 4.3s.3s<0.1s2sss5s\n",
+      "Starting body pose tracker with YOLOv8...\n",
+      "Ready to track!\n",
+      "Tracker stopped\n"
+     ]
+    }
+   ],
    "source": [
     "body_pose_tracker(camera_id=1, show_contour=True)"
    ]
@@ -366,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
